--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/ResetPassword.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/ResetPassword.cshtml
@@ -30,6 +30,11 @@
             transform: scale(1.1); /* 放大 10% */
             transition: transform 0.3s ease-in-out; /* 添加平滑效果 */
         }
+
+        .main-top .formain-topSpan {
+            color: #ffffff;
+            letter-spacing: 2px;
+        }
     </style>
 </head>
 
@@ -38,7 +43,7 @@
         <div class="d-flex justify-content-center p-2">
             <ul>
                 <li>
-                    <i class="fab fa-opencart"><span class="formain-topSpan">貓抓抓購物</span></i>
+                    <i class="fab fa-opencart" style="color:#ffff"><span class="formain-topSpan"></span></i>
                 </li>
             </ul>
         </div>
@@ -279,6 +284,24 @@
                 //    document.querySelector('#ErrorMsg').innerHTML = "發生錯誤: " + error.message;
                 //});
             }
+            var topAnnouncement = $('.formain-topSpan');
+            console.log(topAnnouncement);
+            $.ajax({
+                url: '@Url.Action("GetTopAnnouncement","ProductApi")',
+                type: 'GET',
+                dataType: 'json',
+                success: function (data) {
+                    if (data.success) {
+                        topAnnouncement.text(data.message);
+                    }
+                    else {
+                        topAnnouncement.text(data.messageWelcome);
+                    }
+                },
+                error: function () {
+                    console.log('error');
+                }
+            });
         });
 
     </script>
