--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/style.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/style.css
@@ -190,6 +190,7 @@ p {
 
     .main-top .formain-topSpan {
         color: #ffffff;
+        font-family: 'Dosis', sans-serif;
     }
 
 .custom-select-box {
