--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Pay.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Pay.cshtml
@@ -212,7 +212,7 @@
     <script>
         // 監聽送出訂單按鈕的點擊事件
         $('#gotopay').on('click', (e) => {
-            e.preventDefault(); /*因為送出就跳轉到綠界，這個可以停住確認自己的console.log的內容*/
+            /* e.preventDefault(); */ /*因為送出就跳轉到綠界，這個可以停住確認自己的console.log的內容*/
             console.log("嚴重折壽耶^_^")
             let formData = $("#ecpayform").serializeArray();
             var json = {};
