寄發優惠券到期通知功能完成

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Banner/Banner.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Banner/Banner.cshtml
@@ -178,25 +178,25 @@
                                     <!--內容表單-->
                                     <div class="row">
                                         <div class="form-group">
-                                            <label>編號</label>
+                                            <label>編號：</label>
                                             <input type="text" class="form-control" readonly disabled id="editor-id" name="BannerId">
                                         </div>
                                         <div class="form-group">
-                                            <label>名稱</label>
+                                        <label>名稱：</label>
                                             <input type="text" class="form-control" id="editor-name" name="Banner">
                                         </div>
                                         <div class="form-group">
-                                            <label>發佈日期</label>
+                                        <label>發佈日期：</label>
                                             <input type="date" class="form-control" id="editor-date" name="PublishDate">
                                         </div>
 
                                         <div class="form-group">
-                                            <label>連結</label>
+                                        <label>連結：</label>
                                             <input type="text" class="form-control" id="editor-topage" name="ToPage">
                                         </div>
 
                                         <div class="form-group">
-                                            <label>圖片</label>
+                                        <label>圖片：</label>
                                             <input type="file" class="form-control" id="editor-img" name="Image" accept="image/*">
                                         </div>
 
@@ -623,8 +623,6 @@
             $("#create-name").val("測試用橫幅");
             $("#create-date").val("2023-09-05");
             $('#create-display').val("true");
-            $('#create-image').val("https://msit150team02blob.blob.core.windows.net/msit150team02/categories_img_02.jpg");
-            $('#preview-createimage').val("https://msit150team02blob.blob.core.windows.net/msit150team02/categories_img_02.jpg");
         }
 
         // 再次新增時清空表單輸入值
